--- a/index.html
+++ b/index.html
@@ -55,70 +55,92 @@
             </h1>
             <div class="list-lagu">
              <div class="album-cover">
-              <img alt="" height="200px" src="images/album lagu/MnM.f.jpg" width="200px"/>
-              <div class="info-lagu">
-               <div class="judul-lagu">
-               <a href="https://music.youtube.com/watch?v=BH36_Aip7sA&si=1ShsQ20HxTJ6HjxR" target="_blank">Arteri</a>
-               </div>
-               <div class="artis-lagu">
-                .Feast
-               </div>
-              </div>
+                <img alt="" height="200px" src="images/album lagu/MnM.f.jpg" width="200px"/>
+                <div class="info-lagu">
+                    <div class="judul-lagu">
+                        <a href="https://music.youtube.com/watch?v=BH36_Aip7sA&si=1ShsQ20HxTJ6HjxR" target="_blank">Arteri</a>
+                    </div>
+                    <div class="artis-lagu">
+                        .Feast
+                    </div>
+                </div>
              </div>
              <div class="album-cover">
-              <img alt="" src="images/album lagu/LelslarAlteh.jpg" width="200px"/>
-              <div class="info-lagu">
-               <div class="judul-lagu">
-                <a href="https://music.youtube.com/watch?v=Kqs3w9BTjlU&si=lItNvRbQgsCtzQYx" target="_blank">Lesti Sayang Billar</a>
-               </div>
-               <div class="artis-lagu">
-                Aldi Taher
-               </div>
-              </div>
+                <img alt="" src="images/album lagu/LelslarAlteh.jpg" width="200px"/>
+                <div class="info-lagu">
+                    <div class="judul-lagu">
+                        <a href="https://music.youtube.com/watch?v=Kqs3w9BTjlU&si=lItNvRbQgsCtzQYx" target="_blank">Lesti Sayang Billar</a>
+                    </div>
+                    <div class="artis-lagu">
+                        Aldi Taher
+                    </div>
+                </div>
              </div>
              <div class="album-cover">
-              <img alt="" src="images/album lagu/HaluFeby.jpg"/>
-              <div class="info-lagu">
-               <div class="judul-lagu">
-                <a href="https://music.youtube.com/watch?v=4jdsq0QsTyE&si=Mk-5oFRRD5imDAYQ" target="_blank">Halu</a>
-               </div>
-               <div class="artis-lagu">
-                Feby Putri
-               </div>
-              </div>
+                <img alt="" src="images/album lagu/HaluFeby.jpg"/>
+                <div class="info-lagu">
+                    <div class="judul-lagu">
+                        <a href="https://music.youtube.com/watch?v=4jdsq0QsTyE&si=Mk-5oFRRD5imDAYQ" target="_blank">Halu</a>
+                    </div>
+                    <div class="artis-lagu">
+                        Feby Putri
+                    </div>
+                </div>
+            </div>
+             <div class="album-cover">
+                <img alt="" src="images/album lagu/HeavyRotationJKT48.jpg"/>
+                    <div class="info-lagu">
+                    <div class="judul-lagu">
+                        <a href="https://music.youtube.com/watch?v=JM2kc5hYN1o&si=b5ugdWixKY5wsWXh" target="_blank">Heavy Rotation</a>
+                    </div>
+                    <div class="artis-lagu">
+                        JKT48
+                    </div>
+                </div>
              </div>
              <div class="album-cover">
-              <img alt="" src="images/album lagu/HeavyRotationJKT48.jpg"/>
-              <div class="info-lagu">
-               <div class="judul-lagu">
-                <a href="https://music.youtube.com/watch?v=JM2kc5hYN1o&si=b5ugdWixKY5wsWXh" target="_blank">Heavy Rotation</a>
-               </div>
-               <div class="artis-lagu">
-                JKT48
-               </div>
-              </div>
+                <img alt=" " src="images/album lagu/MatahariTenggelam.jpg"/>
+                <div class="info-lagu">
+                    <div class="judul-lagu">
+                        <a href="https://music.youtube.com/watch?v=42b-0EeIckY&si=Rfj4TZXD7NL7b_Ez" target="_blank">Matahari Tenggelam</a>
+                    </div>
+                    <div class="artis-lagu">
+                        Hindia
+                    </div>
+                </div>
              </div>
              <div class="album-cover">
-              <img alt=" " src="images/album lagu/MatahariTenggelam.jpg"/>
-              <div class="info-lagu">
-               <div class="judul-lagu">
-                <a href="https://music.youtube.com/watch?v=42b-0EeIckY&si=Rfj4TZXD7NL7b_Ez" target="_blank">Matahari Tenggelam</a>
-               </div>
-               <div class="artis-lagu">
-                Hindia
-               </div>
-              </div>
+                <img alt="" src="images/album lagu/BungaAbadi.jpg"/>
+                <div class="info-lagu">
+                    <div class="judul-lagu">
+                        <a href="https://music.youtube.com/watch?v=WuyME2i6-fg&si=HNGXLLnypuLtG5XQ" target="_blank">Bunga Abadi</a>
+                    </div>
+                    <div class="artis-lagu">
+                        Rio Clappy
+                    </div>
+                </div>
              </div>
              <div class="album-cover">
-              <img alt="" src="images/album lagu/BungaAbadi.jpg"/>
-              <div class="info-lagu">
-               <div class="judul-lagu">
-                <a href="https://music.youtube.com/watch?v=WuyME2i6-fg&si=HNGXLLnypuLtG5XQ" target="_blank">Bunga Abadi</a>
-               </div>
-               <div class="artis-lagu">
-                Rio Clappy
-               </div>
-              </div>
+                <img src="images/album lagu/tanpa bicara.jpg" alt="">
+                <div class="info-lagu">
+                    <div class="judul-lagu">
+                        <a href="https://music.youtube.com/watch?v=SfKplOojrOc&si=Q6Zl0prcO1Jc5iJP" target="_blank">Tanpa Bicara</a>
+                    </div>
+                    <div class="artis-lagu">
+                        Rizwan Fadilah
+                    </div>
+                </div>
+             </div>
+             <div class="album-cover">
+                <img src="images/album lagu/loveme.jpg" alt="">
+                <div class="info-lagu">
+                    <div class="judul-lagu">
+                        <a href="https://music.youtube.com/watch?v=NajmHZ6kcUg&si=Tz5a_RYgY8hCHfdO" target="_blank">Love Me (feat. Drake & Future)</a>
+                    </div>
+                    <div class="artis-lagu">
+                        Lil Wayne
+                    </div>
+                </div>
              </div>
             </div>
            
@@ -127,58 +149,72 @@
 
     <section class="top-artist" id="top-artist">
         <h1>Top Artist In This Year</h1>
+        <div class="album-scroll">
         <div class="album-artis">
-            <div class="artis">
-                <img src="images/Arrtis/feast.jpg" alt=""width="200px">
-                <div class="nama-artis">
-                    .Feast
+                <div class="artis">
+                    <img src="images/Arrtis/feast.jpg" alt="">
+                    <div class="nama-artis">
+                        .Feast
+                    </div>
                 </div>
-            </div>
-
-            <div class="artis">
-                <img src="images/Arrtis/Hindia.jpg" alt=""width="200px">
-                <div class="nama-artis">
-                    Hindia
+                <div class="artis">
+                    <img src="images/Arrtis/Hindia.jpg" alt="">
+                    <div class="nama-artis">
+                        Hindia
+                    </div>
                 </div>
-            </div>
-            <div class="artis">
-                <img src="images/Arrtis/febyputri.jpg" alt=""width="200px">
-                <div class="nama-artis">
-                    Feby Putri
+                <div class="artis">
+                    <img src="images/Arrtis/febyputri.jpg" alt="">
+                    <div class="nama-artis">
+                        Feby Putri
+                    </div>
                 </div>
-            </div>
-            <div class="artis">
-                <img src="images/Arrtis/jkt48.jpg" alt=""width="200px">
-                <div class="nama-artis">
-                    JKT48
+                <div class="artis">
+                    <img src="images/Arrtis/jkt48.jpg" alt="">
+                    <div class="nama-artis">
+                        JKT48
+                    </div>
                 </div>
-            </div>
-            <div class="artis">
-                <img src="images/Arrtis/rioclapy.jpg" alt=""width="200px">
-                <div class="nama-artis">
-                    Rio Clappy
+                <div class="artis">
+                    <img src="images/Arrtis/rioclapy.jpg" alt="">
+                    <div class="nama-artis">
+                        Rio Clappy
+                    </div>
                 </div>
+                <div class="artis">
+                    <img src="images/album lagu/LelslarAlteh.jpg" alt="">
+                    <div class="nama-artis">
+                        Aldi Taher
+                    </div>
+                 </div>
+                 <div class="artis">
+                    <img src="images/Arrtis/Alphavlle.jpg" alt="">
+                    <div class="nama-artis">
+                        Alphaville
+                    </div>
+                 </div>
+                 <div class="artis">
+                    <img src="images/Arrtis/LilWyne.jpg" alt="">
+                    <div class="nama-artis">
+                        Lil Wayne
+                    </div>
+                 </div>
+                 <div class="artis">
+                    <img src="images/Arrtis/rizwan.jpg" alt="">
+                    <div class="nama-artis">
+                        Rizwan Fadilah
+                    </div>
+                 </div>
             </div>
-            <div class="artis">
-                <img src="images/album lagu/LelslarAlteh.jpg" alt=""width="200px">
-                <div class="nama-artis">
-                    Aldi Taher
-                </div>
-            </div>
-        </div>
+    </div>
         <div class="aldi-taher">
             <img src="images/Arrtis/KPU_Aldi_Taher.jpg" alt="">
-            <p>
-                Aldi Taher, S.E.[1] (lahir 25 Oktober 1983) adalah aktor, sutradara, pelawak, model, penyanyi-penulis lagu, presenter, 
-                politikus, dan kreator konten berkebangsaan Indonesia.Aldi Taher dilahirkan dengan nama Rahmat Aldiansyah,[1] sebagai 
-                putra ketiga di antara enam bersaudara dari pasangan yang berdarah Minangkabau, yakni Ramlis Saputra Sidi Rusli Taher dan 
-                Rosita Bagindo Oedin, sehingga ia merupakan cucu dari pendiri Universitas Jayabaya, yakni Moeslim Taher.Aldi memulai karier 
+            <p> Aldi memulai karier 
                 di dunia hiburan dengan berpartisipasi dalam ajang pencarian model yang diselenggarakan oleh majalah Aneka Yess! pada tahun 2001.
                 Ia mulai dikenal secara luas setelah menjadi model untuk video klip dari grup musik Ada Band dengan judul "Manusia Bodoh". Aldi 
                 juga menjadi finalis di ajang MTV VJ Hunt. Ia pernah membuat grup musik bernama Radio bersama Raffi Ahmad, Irwansyah, Indra Perdana Sinaga,
                 Mende, dan Okin, serta membentuk grup musik duo bernama Kingkong—yang sempat merilis satu album dengan judul Cari Wanita pada tahun 2008. 
-                Ia juga membuat lagu tema untuk film Leak bersama Nadia Vega. Pada tahun 2013 hingga 2016, ia pernah bergabung dalam grup vokal pria 
-                bernama Trio Ubur Ubur, yang terbentuk berkat serial televisi Emak Ijah Pengen ke Mekah (2013—2015).
+                Ia juga membuat lagu tema untuk film Leak bersama Nadia Vega. Pada tahun 2013 hingga 2016.
             </p>
         </div>
     </section>
