--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hidupkan Harimu Dengan Musik</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
 <body>
@@ -13,7 +14,12 @@
     <header>
         <!-- BAGIAN BAR NAVIGASI -->
         <a href="#" class="logo"><img src="images/musical-note.png" alt="">MUSIK ASIK</a>
-        <!-- <input type="text" class="pemcarian"> -->
+        <div class="search-bar">
+            <div class="home-icon">
+                <i class="fas fa-search"></i>
+            </div>
+            <input type="text" placeholder="Lagi cari lagu apa nih?">
+        </div>
         <nav class="menu">
             <a href="#home">Home</a>
             <a href="#top-music">Top Music</a>
@@ -32,11 +38,12 @@
             </div>
             <div class="content-right">
                 <h1>musik asik</h1>
-                <p>Kami menyatukan layanan musik favorit anda dan bergabung mendengarkan, menonton, dan berbagi untuk menghubungkan dunia musik anda
+                <p>Situs baru ini merupakan langkah yang sangat penting dalam pengembangan MusicWeb. 
+                    Situs ini akan menawarkan tata letak yang lebih jelas, navigasi yang lebih mudah, dan tampilan yang segar dan modern.
                 </p>
                 <div class="tombol">
                     <div class="btn">
-                        <a href="#about"><button>Selengkapnya</button></a> 
+                        <a href="#top-music"><button>Selengkapnya</button></a> 
                         </div>
                     </div>    
                 </div>
@@ -230,7 +237,6 @@
                         Daniel Baskara Putra
                     </h1>
                 </div>
-                .
                 <p>Daniel Baskara Putra, atau lebih dikenal dengan mononim <strong><i>Hindia</i></strong> (lahir 22 Februari 1994) adalah penyanyi-penulis lagu, 
                     produser rekaman, dan komposer Indonesia. Baskara adalah vokalis grup musik <strong><i>.Feast</i></strong> serta frontman dari grup band yang 
                     dibentuknya itu, pada tahun 2019 yang bertajuk Lomba Sihir.Baskara Putra memulai perjalanan karier musiknya pada tahun 2012 ketika bersama teman-temannya ia mendirikan grup musik Feast.
