--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <!-- BAGIAN HEADER DISINI -->
     <header>
         <!-- BAGIAN BAR NAVIGASI -->
+         <input type="checkbox" id="toggler">
+         <label for="toggler" class="fas fa-bars"></label>
         <a href="#" class="logo"><img src="images/musical-note.png" alt="">MUSIK ASIK</a>
         <div class="search-bar">
             <div class="home-icon">
@@ -55,7 +57,7 @@
 <!-- TOP MUSIC SECTION -->
     <section class="top-music" id="top-music">
         <div class="container">
-            <h1>
+            <h1 class="heading">
              Top Songs In Our Heart
             </h1>
             <div class="list-lagu">
@@ -152,21 +154,27 @@
            <div class="musik"> 
                 <h2 class="playing">Laki-laki tidak bercerita (Singkat saja)</h2>
                 <div class="controls">
-                    <button class="music-btn previous"><i class="ph-bold ph-skip-back"></i></button>
+                    <button class="music-btn previous">
+                        <i class="ph-bold ph-skip-back"></i>
+                    </button>
                     <button class="music-btn play-pause">
                         <i id="play-pause-icon" class="ph-bold ph-play"></i>
                     </button>
-                    <button class="music-btn next"><i class="ph-bold ph-skip-forward"></i></button>
+                    <button class="music-btn next">
+                        <i class="ph-bold ph-skip-forward"></i>
+                    </button>
                 </div>
-                <div class="bar-music"><div class="bar-proses"></div>
+                <div class="bar-music">
+                    
                 
                 </div>
             </div>
         </div>
     </section>
+
 <!-- TOP ARTIST SECTION -->
     <section class="top-artist" id="top-artist">
-        <h1>Top Artist In This Year</h1>
+        <h1 class="heading">Top Artist In This Year</h1>
         <div class="album-scroll">
             <div class="album-artis">
                     <div class="artis">
